crates/doodle-core/tests/snapshots/diag_render__multi_diagnostic_load_error.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_load_error(&err, &view(\"two.doodle\", source))"
---
error[chained-comparison]: comparison operators don't chain
  --> two.doodle:2:7
2 |   if (a < b < c) then
  |       ^^^^^^^^^

error[const-reassignment]: can't reassign `x` — it's a constant
  --> two.doodle:4:3
4 |   x = 2
  |   ^^^^^
