crates/doodle-core/tests/snapshots/diag_render__multi_line_span_underlines_first_line_only.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: "render_diagnostic(&d, &view(\"f.doodle\", source))"
---
error[unterminated-string]: this block string is never closed
  --> f.doodle:2:7
2 |   x = """
  |       ^^^
