crates/doodle-core/tests/snapshots/diag_render__nfc_normalized_source_positions_a_caret_correctly.snap
---
source: crates/doodle-core/tests/diag_render.rs
expression: rendered
---
error[chained-comparison]: comparison operators don't chain
  --> café.doodle:1:13
1 | café = draw(a < b < c)
  |             ^^^^^^^^^
